core-concepts/1-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
...
apiVersion: v1
kind: pod
metadata:
  name: ubuntu-sleeper
  labels:
    os: ubuntu
spec:
  containers:
    - name: ubuntu-sleeper
      image: ubuntu-sleeper
      command: ["sleep2.0"] # Related to ENTRYPOINT in Dockerfile
      args: ["3"] # Related to CMD in Dockerfile
      # command: # This is also valid
      # - "sleep2.0"
      # - "3"
      env: # Environemnt variable
      - name: color
        value: pink
