core-concepts/10-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  creationTimestamp: null
  name: my-dashboard
...
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  serviceAccountName: my-dashboard
...
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  automountServiceAccountToken: false # If you do not set this to false, it will automatically mount the default service account
...
# How to generate long lived tokens. Not a recommned way
apiVersion: v1
kind: Secret
metadata:
  name: build-robot-secret
  annotations:
    kubernetes.io/service-account.name: my-dashboard # Need to create service account first
type: kubernetes.io/service-account-token
