core-concepts/5-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
...
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  namespace: dev
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
