core-concepts/8-secret.yml
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: null
  name: app-secret
data:
  DB_PASS: cGFzc3dvcmQ= # echo -n 'password' | base64
# To decode ->  echo -n 'cGFzc3dvcmQ=' | base64 -d
...
# From env
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    envFrom:
    - secretRef:
        name: my-secret
...
# Single ENV
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-pod
    type: frontend
spec:
  containers:
  - name: nginx-con
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    env:
    - name: DB_PASS
      valueFrom:
        secretKeyRef:
          name: my-secret
          key: DB_PASS
...
# Mounted as a volume
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: my-app-secret
        mountPath: "/secrets"
        readOnly: true
  volumes:
  # You set volumes at the Pod level, then mount them into containers inside that Pod
  - name: my-app-secret
    secret:
      secretName: my-secret-demo
